k8s/robert-shop-api-ingress.yaml
kapiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-robert-shop-api
  namespace: default
spec:
  rules:
  - host: robert.shop.yunxiao.com
    http:
      paths:
      - path:
        backend:
          serviceName: robert-shop-api
          servicePort: 8080
